--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE HTML>
 <!--
-	Twenty by HTML5 UP
+	Spectral by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Kavitha Arur</title>
+		<title>Kavitha Arur's Webpage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="This is the webpage of Kavitha Arur, postdoc at UMBC/ NASA Goddard."/>
 		<meta name="keywords" content="Kavitha, Arur, astronomy">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		
-		<!-- Global site tag (gtag.js) - Google Analytics -->
+	</head>
+	<body class="landing is-preload">
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154581217-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -24,168 +26,117 @@
   gtag('config', 'UA-154581217-1');
 </script>
 
-	</head>
-	<body class="index is-preload">
-		<div id="page-wrapper">
+		<!-- Page Wrapper -->
+			<div id="page-wrapper">
 
-			<!-- Header -->
-				<header id="header" class="alt">
-					<h1 id="logo"><a href="index.html">Kavitha Arur</span></a></h1>
-					<nav id="nav">
-						<ul>
-							<li class="current"><a href="index.html">Welcome</a></li>
-							<li class="current"><a href="#one">Research</a></li>
-							<li class="current"><a href="#two">CV</a></li>
-							<li class="current"><a href="#three">Outreach</a></li>
-							<li class="current"><a href="contact.html">Contact</a></li>
-						</ul>
-					</nav>
-				</header>
-
-			<!-- Banner -->
-				<section id="banner">
-
-					<!--
-						".inner" is set up as an inline-block so it automatically expands
-						in both directions to fit whatever's inside it. This means it won't
-						automatically wrap lines, so be sure to use line breaks where
-						appropriate (<br />).
-					-->
-					<div class="inner">
-							<h2>HELLO! I'm Kavitha Arur</h2>
-						<p>I am currently a postdoctoral research associate at NASA Goddard/ University of Maryland,
-						<br />
-						and the lead for the General Observer Facility for IXPE. 
-						<br />
-						I work on X-ray timing analysis from accreting compact objects. 
-						<footer>
-							<ul class="buttons stacked">
-								<li><a href="contact.html" class="button fit scrolly">Get in Touch</a></li>
-							</ul>
-						</footer>
-
-					</div>
-
-				</section>
-
-			<!-- Main -->
-				<article id="main">
-					<!-- One -->
-						<section id="one" class="wrapper style2 container special-alt">
-							<div class="row gtr-50">
-								<div class="col-8 col-12-narrower">
-
-									<header>
-										<h2>Research</h2>
-									</header>
-									<p>My primary research is focused on X-ray binaries, where a compact object such as a neutron star or black hole accretes material from a nearby companion star. 
-										 I work on applying a higher order time series analysis technique called the bispectrum to Quasi Periodic Oscillations (QPOs) from X-ray binaries. 
-									By using this new (to astronomy!) technique, we can learn a lot about the geometry of the regions close to the black hole where the high energy X-rays originate. </p>
-									<footer>
-										<ul class="buttons">
-											<li><a href="#" class="button">Find Out More</a></li>
+				<!-- Header -->
+					<header id="header" class="alt">
+						<h1><a href="index.html">Kavitha Arur</a></h1>
+						<nav id="nav">
+							<ul>
+								<li class="special">
+									<a href="#menu" class="menuToggle"><span>Menu</span></a>
+									<div id="menu">
+										<ul>
+											<li><a href="index.html">Home</a></li>
+											<li><a href="research.html">Research</a></li>
+											<li><a href="resources.html">Resources</a></li>
+											<li><a href="presenting.html">Better Presenting</a></li>
+											<li><a href="contact.html">Contact</a></li>
 										</ul>
-									</footer>
+									</div>
+								</li>
+							</ul>
+						</nav>
+					</header>
 
-								</div>
-								<div class="col-4 col-12-narrower imp-narrower">
-									<img alt="" src="images/cygx1.jpg" style="width: 400px; height: 600px;">
-								</div>
-							</div>
-						</section>
+				<!-- Banner -->
+					<section id="banner">
+						<div class="inner">
+							<h2>HELLO!</h2>
+							<p> This is the website of Kavitha Arur <br />
+								Postdoctoral Research Assistant at NASA Goddard Space Flight Center <br /> </p>
+						</div>
+						<a href="#one" class="more scrolly">Learn More</a>
+					</section>
 
-					<!-- Two -->
-						<section id="two" class="wrapper style1 container special">
-							<div class="row">
-								<div class="col-4 col-12-narrower">
-
-									<section>
-										<span class="icon solid featured fa-clipboard"></span>
-										<header>
-											<h3>Curriculum Vitae</h3>
-										</header>
-										<p>You can find a copy of my CV <a href="https://karur.github.io/homepage/CV_KArur.pdf">here.</a></p>
-									</section>
-								</div>
-								<div class="col-6 col-12-narrower">
-									
-									<section>
-										<span class="icon solid featured fa-clipboard"></span>
-										<header>
-											<h3>ADS Library</h3>
-										</header>
-										<p>A list of my publications can be found on the ADS website <a href="https://ui.adsabs.harvard.edu/user/libraries/uMuLlI1oQ6yZxwsGfNOxhw">here.</a></p>
-									</section>
-
-							</div>
-						</section>
-
-					<!-- Three -->
-						<section id="three" class="wrapper style3 container special">
-
+				<!-- One -->
+					<section id="one" class="wrapper style1 special">
+						<div class="inner">
 							<header class="major">
-								<h2>Outreach and Service</h2>
+								<h2>Research Interests</h2>
+								<p> My primary research is focused on X-ray binaries, where a compact object <br />
+									such as a neutron star or black hole accretes material from a nearby companion star. <br />
+									I work on applying a higher order time series analysis technique called the bispectrum <br />
+									to Quasi Periodic Oscillations (QPOs) from X-ray binaries. By using this new (to astronomy!) <br />
+									technique, we can learn a lot about the geometry of the regions close to the black hole <br />
+									where the high energy X-rays originate. <br /></p>
+
+									<a href="CV_KArur.pdf" class="button">Click here for my CV</a>
 							</header>
+						</div>
+					</section>
 
-							<div class="row">
-								<div class=col-6 col-12-narrower">
-
-									<section>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-										<header>
-											<h3>Outreach</h3>
-										</header>
-										<p> I am involved in a number of public outreach and mentoring activities. Some highlights include Astro Night at TTU, judging at the South Plains Regional Science Fair and 
-										volunteering for after school science demonstrations at local elementary schools.</p>
-									</section>
-
-								</div>
-								<div class="col-6 col-12-narrower">
-
-									<section>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-										<header>
-											<h3>Service and Collaborations</h3>
-										</header>
-										<p> I am a part of the science working group for <a href="https://gammaray.nsstc.nasa.gov/Strobe-X/">STROBE-X</a>, a NASA probe class mission that is currently in the concept study phase.  </p>
-									</section>
-
-								</div>
+				<!-- Two -->
+					<section id="two" class="wrapper alt style2">
+						<section class="spotlight">
+							<div class="image"><img src="images/Xraybinary.jpeg" alt="" /></div><div class="content">
+								<h2>Bispectrum</h2>
+								<p>The bispectrum is a time series analysis technique that was originally developed to study ocean waves. 
+								We can now apply this novel technique to X-ray time series to probe regions close to black holes! </p>
+								<a href="research.html" class="button">Keep reading</a>
 							</div>
-							
-
-							<footer class="major">
-								<ul class="buttons">
-									<li><a href="#" class="button">See More</a></li>
-								</ul>
-							</footer>
-
 						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/ixpe.jpeg" alt="" /></div><div class="content">
+								<h2>Polarimetry</h2>
+								<p>After nearly 40 years, we have a window into the world of X-ray polarimetry thanks to IXPE, and I am very excited to be leading their General Observer Facility.</p> <br>
+								<a href="https://heasarc.gsfc.nasa.gov/docs/ixpe/about/" class="button">Learn More about IXPE</a>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/presenting.jpg" alt="" /></div><div class="content">
+								<h2>Better Presenting</h2>
+								<p>Being able to effectively communicate to a wide range of audiences is an important skill to have! I co-lead workshops
+								at the annual meetings of the American Astronomical Society to help researchers of all levels improve their presenting skills.</p><br>
+								<a href="presenting.html" class="button">Learn More</a>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/resource.jpg" alt="" /></div><div class="content">
+								<h2>Resources</h2>
+								<p>I have compiled a number of various career and research resources that I have found helpful. Maybe you will too!</p>
+								<a href="resources.html" class="button">Click here for resources</a>
+							</div>
+						</section>
+					</section>
 
-				</article>
+				<!-- CTA -->
+					<section id="cta" class="wrapper style4">
+							<center>
+								<a href="contact.html" class="button fit primary">Get in Touch</a>
+							</center>
+					</section>
 
+				<!-- Footer -->
+					<footer id="footer">
+						<ul class="icons">
+							<li><a href="https://github.com/karur" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/kavitha-arur-87a369192/" 
+								class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto:karur1@umbc.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; Kavitha Arur</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</footer>
 
-			<!-- Footer -->
-				<footer id="footer">
-
-					<ul class="icons">
-						<li><a href="mailto:karur1@umbc.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						<li><a href="https://www.linkedin.com/in/kavitha-arur-87a369192/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					</ul>
-
-					<ul class="copyright">
-						<li>&copy; Kavitha Arur</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-
-				</footer>
-
-		</div>
+			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
